--- a/CSManagement/CSManagement/Views/Picture_Banner/Index.cshtml
+++ b/CSManagement/CSManagement/Views/Picture_Banner/Index.cshtml
@@ -36,9 +36,7 @@
             @Html.DisplayFor(modelItem => item.Picture_Link)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Picture_ID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Picture_ID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Picture_ID })
+            @Html.ActionLink("Edit", "Edit", new { id=item.Picture_ID })
         </td>
     </tr>
 }
