--- a/CSManagement/CSManagement/Views/Shared/_LayoutUser.cshtml
+++ b/CSManagement/CSManagement/Views/Shared/_LayoutUser.cshtml
@@ -27,8 +27,6 @@
             background-position-x: left;
             background-position-y: top;
             background-size: initial;
-            background-repeat-x: repeat;
-            background-repeat-y: no-repeat;
             background-attachment: scroll;
             background-origin: initial;
             background-clip: initial;
@@ -185,7 +183,7 @@
             -o-transition: -o-transform 0.3s ease-in-out, margin 0.3s ease-in-out;
             transition: transform 0.3s ease-in-out, margin 0.3s ease-in-out;
             margin-left: 0px;
-            z-index: 820;
+            z-index: 820;}
     </style>
 </head>
 
