--- a/CSManagement/CSManagement/Views/Departments/Edit.cshtml
+++ b/CSManagement/CSManagement/Views/Departments/Edit.cshtml
@@ -31,9 +31,9 @@
                     </div>
 
                     <div class="col-lg-4">
-                        @Html.LabelFor(model => model.Dep_Name, htmlAttributes: new { @class = "control-label" })
-                        @Html.EditorFor(model => model.Dep_Name, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.Dep_Name, "", new { @class = "text-danger" })
+                        @Html.LabelFor(model => model.Department_Sup.Deps_Name, "ชื่อหมวดวิชา", htmlAttributes: new { @class = "control-label" })
+                        @Html.DropDownList("Dep_Name", null, "กรุณาเลือกหมวดวิชา", htmlAttributes: new { @class = "form-control" })
+                        @Html.ValidationMessageFor(model => model.Department_Sup.Deps_Name, "", new { @class = "text-danger" })
                     </div>
 
                     <div class="col-lg-4">
