--- a/CSManagement/CSManagement/Views/Departments/Index.cshtml
+++ b/CSManagement/CSManagement/Views/Departments/Index.cshtml
@@ -33,7 +33,7 @@
                 {
                 <tr>
                     <td style="text-align:center">@(i++)</td>
-                    <td>@Html.DisplayFor(modelItem => item.Dep_Name)</td>
+                    <td>@Html.DisplayFor(modelItem => item.Department_Sup.Deps_Name)</td>
                     <td>@Html.DisplayFor(modelItem => item.Course.Course_NameTH)</td>
                     <td style="text-align:center">@Html.DisplayFor(modelItem => item.Course.Course_Year)</td>
                     <td style="text-align:center">@Html.DisplayFor(modelItem => item.Dep_Credit)</td>
