--- a/CSManagement/CSManagement/Views/Generations/Create.cshtml
+++ b/CSManagement/CSManagement/Views/Generations/Create.cshtml
@@ -5,98 +5,97 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("Create", "Generations", FormMethod.Post, new { enctype = "multipart/form-data", accept_charset = "utf-8" }))
 {
-    @Html.AntiForgeryToken()
-    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-    <section class="content">
-        <div class="box box-default">
-            <div class="box-header with-border">
-                <h3 class="box-title" style="font-family: 'Kanit', sans-serif">เพิ่มข้อมูลรุ่นหลักสูตรอบรม</h3>
+@Html.AntiForgeryToken()
+@Html.ValidationSummary(true, "", new { @class = "text-danger" })
+<section class="content">
+    <div class="box box-default">
+        <div class="box-header with-border">
+            <h3 class="box-title" style="font-family: 'Kanit', sans-serif">เพิ่มข้อมูลรุ่นหลักสูตรอบรม</h3>
 
-                <div class="box-tools pull-right">
-                    <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i></button>
-                    <button type="button" class="btn btn-box-tool" data-widget="remove"><i class="fa fa-remove"></i></button>
-                </div>
-            </div>
-            <!-- /.box-header -->
-            <div class="box-body" style="font-size:15px">
-                <div class="row">
-                    <div class="form-group  col-md-2">
-                        @Html.LabelFor(model => model.Gen_Name, htmlAttributes: new { @class = "control-label" })
-                        @Html.EditorFor(model => model.Gen_Name, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.Gen_Name, "", new { @class = "text-danger" })
-                    </div>
-
-                    <div class="form-group col-md-10">
-                        @Html.LabelFor(model => model.Gen_SCID, htmlAttributes: new { @class = "control-label" })
-                        @Html.DropDownList("Gen_SCID", null, htmlAttributes: new { @class = "form-control" })
-                        @Html.ValidationMessageFor(model => model.Gen_SCID, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="form-group col-md-4">
-                        @Html.LabelFor(model => model.Gen_MemberMax, htmlAttributes: new { @class = "control-label" })
-                        @Html.EditorFor(model => model.Gen_MemberMax, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.Gen_MemberMax, "", new { @class = "text-danger" })
-                    </div>
-
-                    <div class="form-group col-md-4">
-                        @Html.LabelFor(model => model.Gen_Year, htmlAttributes: new { @class = "control-label" })
-                        @Html.EditorFor(model => model.Gen_Year, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.Gen_Year, "", new { @class = "text-danger" })
-                    </div>
-
-                    <div class="form-group col-md-4">
-                        @Html.LabelFor(model => model.Gen_Fee, htmlAttributes: new { @class = "control-label" })
-                        @Html.EditorFor(model => model.Gen_Fee, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.Gen_Fee, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="form-group col-md-4">
-                        @Html.LabelFor(model => model.Gen_Date, htmlAttributes: new { @class = "control-label" })
-                            @Html.EditorFor(model => model.Gen_Date, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.Gen_Date, "", new { @class = "text-danger" })
-                    </div>
-
-                    <div class="form-group col-md-4">
-                        @Html.LabelFor(model => model.Gen_Location, htmlAttributes: new { @class = "control-label" })
-                        @Html.EditorFor(model => model.Gen_Location, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.Gen_Location, "", new { @class = "text-danger" })
-                    </div>
-
-                    <div class="form-group col-md-4">
-                        @Html.LabelFor(model => model.Gen_Status, htmlAttributes: new { @class = "control-label" })
-                        <div class="input-group">
-                            <span class="input-group-addon"><i class="fa  fa-mortar-board"></i></span>
-                            @Html.DropDownList("Gen_Status", null, htmlAttributes: new { @class = "form-control" })
-                            @Html.ValidationMessageFor(model => model.Gen_Status, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="form-group col-md-6">
-                        @Html.LabelFor(model => model.Gen_Details, htmlAttributes: new { @class = "control-label" })
-                        @Html.EditorFor(model => model.Gen_Details, new { htmlAttributes = new { @class = "form-control", rows = "7" } })
-                        @Html.ValidationMessageFor(model => model.Gen_Details, "", new { @class = "text-danger" })
-                    </div>
-
-                    <div class="form-group col-md-6">
-                        @Html.LabelFor(model => model.Gen_TextForMail, htmlAttributes: new { @class = "control-label" })
-                        @Html.EditorFor(model => model.Gen_TextForMail, new { htmlAttributes = new { @class = "form-control", rows = "7" } })
-                        @Html.ValidationMessageFor(model => model.Gen_TextForMail, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-                <hr />
-                <div class="text-center">
-                    <button type="submit" class="btn btn-success col-md-3" style="float:right;font-size:18px"><i class="fa fa-save"></i> บันทึกข้อมูล</button>
-                    <a class="btn btn-default col-md-3" style="float:left;font-size:18px" href="@Url.Action("Index", "Generations")"><i class="fa fa-mail-reply "></i> ย้อนกลับ</a>
-                </div>
+            <div class="box-tools pull-right">
+                <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i></button>
+                <button type="button" class="btn btn-box-tool" data-widget="remove"><i class="fa fa-remove"></i></button>
             </div>
         </div>
-    </section>
+        <!-- /.box-header -->
+        <div class="box-body" style="font-size:15px">
+            <div class="row">
+                <div class="form-group  col-md-2">
+                    @Html.LabelFor(model => model.Gen_Name, htmlAttributes: new { @class = "control-label" })
+                    @Html.EditorFor(model => model.Gen_Name, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Gen_Name, "", new { @class = "text-danger" })
+                </div>
+
+                <div class="form-group col-md-10">
+                    @Html.LabelFor(model => model.Gen_SCID, htmlAttributes: new { @class = "control-label" })
+                    @Html.DropDownList("Gen_SCID", null, htmlAttributes: new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.Gen_SCID, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="form-group col-md-4">
+                    @Html.LabelFor(model => model.Gen_MemberMax, htmlAttributes: new { @class = "control-label" })
+                    @Html.EditorFor(model => model.Gen_MemberMax, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Gen_MemberMax, "", new { @class = "text-danger" })
+                </div>
+
+                <div class="form-group col-md-4">
+                    @Html.LabelFor(model => model.Gen_Year, htmlAttributes: new { @class = "control-label" })
+                    @Html.EditorFor(model => model.Gen_Year, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Gen_Year, "", new { @class = "text-danger" })
+                </div>
+
+                <div class="form-group col-md-4">
+                    @Html.LabelFor(model => model.Gen_Fee, htmlAttributes: new { @class = "control-label" })
+                    @Html.EditorFor(model => model.Gen_Fee, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Gen_Fee, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="form-group col-md-4">
+                    @Html.LabelFor(model => model.Gen_Date, htmlAttributes: new { @class = "control-label" })
+                    @Html.EditorFor(model => model.Gen_Date, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Gen_Date, "", new { @class = "text-danger" })
+                </div>
+
+                <div class="form-group col-md-4">
+                    @Html.LabelFor(model => model.Gen_Location, htmlAttributes: new { @class = "control-label" })
+                    @Html.EditorFor(model => model.Gen_Location, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Gen_Location, "", new { @class = "text-danger" })
+                </div>
+
+                <div class="form-group col-md-4">
+                    @Html.LabelFor(model => model.Gen_Status, htmlAttributes: new { @class = "control-label" })
+                    <div class="input-group">
+                        <span class="input-group-addon"><i class="fa  fa-mortar-board"></i></span>
+                        @Html.DropDownList("Gen_Status", null, htmlAttributes: new { @class = "form-control" })
+                        @Html.ValidationMessageFor(model => model.Gen_Status, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="form-group col-md-6">
+                    @Html.LabelFor(model => model.Gen_PDF, htmlAttributes: new { @class = "control-label" })
+                    <input type="file" id="file" name="file">
+                </div>
+
+                <div class="form-group col-md-6">
+                    @Html.LabelFor(model => model.Gen_TextForMail, htmlAttributes: new { @class = "control-label" })
+                    @Html.EditorFor(model => model.Gen_TextForMail, new { htmlAttributes = new { @class = "form-control", rows = "7" } })
+                    @Html.ValidationMessageFor(model => model.Gen_TextForMail, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <hr />
+            <div class="text-center">
+                <button type="submit" class="btn btn-success col-md-3" style="float:right;font-size:18px"><i class="fa fa-save"></i> บันทึกข้อมูล</button>
+                <a class="btn btn-default col-md-3" style="float:left;font-size:18px" href="@Url.Action("Index", "Generations")"><i class="fa fa-mail-reply "></i> ย้อนกลับ</a>
+            </div>
+        </div>
+    </div>
+</section>
 }
