--- a/CSManagement/CSManagement/Views/Generations/Edit.cshtml
+++ b/CSManagement/CSManagement/Views/Generations/Edit.cshtml
@@ -14,7 +14,7 @@
     </script>
 }
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("Edit", "Generations", FormMethod.Post, new { enctype = "multipart/form-data", accept_charset = "utf-8" }))
 {
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
@@ -97,9 +97,8 @@
 
                 <div class="row">
                     <div class="form-group col-md-6">
-                        @Html.LabelFor(model => model.Gen_Details, htmlAttributes: new { @class = "control-label" })
-                        @Html.EditorFor(model => model.Gen_Details, new { htmlAttributes = new { @class = "form-control", rows = "7" } })
-                        @Html.ValidationMessageFor(model => model.Gen_Details, "", new { @class = "text-danger" })
+                        @Html.LabelFor(model => model.Gen_PDF, htmlAttributes: new { @class = "control-label" })
+                        <input type="file" id="file" name="file">
                     </div>
 
                     <div class="form-group col-md-6">
