--- a/CSManagement/CSManagement/Views/Generations/IndexUser.cshtml
+++ b/CSManagement/CSManagement/Views/Generations/IndexUser.cshtml
@@ -68,8 +68,8 @@
                         <th style="text-align:center">ที่</th>
                         <th style="text-align:center">@Html.DisplayNameFor(model => model.Short_Course.SC_NameTH)</th>
                         <th style="text-align:center">@Html.DisplayNameFor(model => model.Gen_Name)</th>
-                        <th style="text-align:center">@Html.DisplayNameFor(model => model.Gen_Member)</th>
-                        <th style="text-align:center">@Html.DisplayNameFor(model => model.Gen_Year)</th>
+                        <th style="text-align:center">จำนวน(คงเหลือ/รับทั้งหมด)</th>
+                        <th style="text-align:center">@Html.DisplayNameFor(model => model.Gen_Date)</th>
                         <th style="text-align:center">@Html.DisplayNameFor(model => model.Gen_Fee)</th>
                         <th style="text-align:center">@Html.DisplayNameFor(model => model.Gen_Status1.Gen_Name)</th>
                         <th style="text-align:center">สมัครเรียน</th>
@@ -80,12 +80,12 @@
                     {
                         <tr>
                             <td style="text-align:center">@(i++)</td>
-                            <td class="modal-link" data-targeturl="@Url.Action("showdetails","Generations",new { id = item.Gen_NO })">@item.Short_Course.SC_NameTH</td>
-                            <td class="modal-link" data-targeturl="@Url.Action("showdetails","Generations",new { id = item.Gen_NO })">@item.Gen_Name</td>
-                            <td class="modal-link" data-targeturl="@Url.Action("showdetails","Generations",new { id = item.Gen_NO })">@Html.DisplayFor(modelItem => item.Gen_Member)</td>
-                            <td class="modal-link" data-targeturl="@Url.Action("showdetails","Generations",new { id = item.Gen_NO })">@Html.DisplayFor(modelItem => item.Gen_Year)</td>
+                            <td class="modal-link" data-targeturl="@Url.Action("showdetails","Generations",new { id = item.Gen_NO })">@item.Short_Course.SC_NameTH.Substring(0, Math.Min(30, @item.Short_Course.SC_NameTH.Length))...</td>
+                            <td style="text-align:center" class="modal-link" data-targeturl="@Url.Action("showdetails","Generations",new { id = item.Gen_NO })">@item.Gen_Name</td>
+                            <td style="text-align:center" class="modal-link" data-targeturl="@Url.Action("showdetails","Generations",new { id = item.Gen_NO })">(@item.Gen_Member/@item.Gen_MemberMax)</td>
+                            <td style="text-align:center" class="modal-link" data-targeturl="@Url.Action("showdetails","Generations",new { id = item.Gen_NO })">@item.Gen_Date</td>
                             <td class="modal-link" data-targeturl="@Url.Action("showdetails","Generations",new { id = item.Gen_NO })" style="text-align:right;color:forestgreen"><strong>@Html.DisplayFor(modelItem => item.Gen_Fee)-.</strong></td>
-                            <td style="color:@(item.Gen_Status1.Gen_Name == "เปิดรับสมัคร"?"forestgreen":"red")">@Html.DisplayFor(modelItem => item.Gen_Status1.Gen_Name)</td>
+                            <td style="text-align:center;color:@(item.Gen_Status1.Gen_Name == "เปิดรับสมัคร"?"forestgreen":"red")">@Html.DisplayFor(modelItem => item.Gen_Status1.Gen_Name)</td>
                             <td style="text-align:center">
                                 <button type="button" class="btn btn-success btn-sm  modal-link"
                                         data-targeturl="@Url.Action("showdetails","Generations",new { id = item.Gen_NO })">
@@ -122,7 +122,6 @@
                         '<div class="modal-dialog">' +
                         '<div class="modal-content" id= "modalbody" >' +
                         data + '</div></div>').modal();
-
                 });
             });
         });
