--- a/CSManagement/CSManagement/Views/Generations/showdetails.cshtml
+++ b/CSManagement/CSManagement/Views/Generations/showdetails.cshtml
@@ -1,4 +1,13 @@
 ﻿@model CSManagement.Models.Generation
+<style>
+    .col1 {
+        width: 25%;
+    }
+
+    .col2 {
+        width: 75%;
+    }
+</style>
 
 <div class="modal-header" style="background-color:#F39C12">
     <button type="button" class="close" data-dismiss="modal">&times;</button>
@@ -8,24 +17,12 @@
     <table class="table table-bordered" style="width: 100%">
         <tbody>
             <tr>
-                <th style="text-align: center">@Html.DisplayNameFor(model => model.Short_Course.SC_NameTH)</th>
-                <td>@Html.DisplayFor(modelItem => Model.Short_Course.SC_NameTH)</td>
+                <th class="col1" style="text-align: center">@Html.DisplayNameFor(model => model.Short_Course.SC_NameTH)</th>
+                <td class="col2">@Html.DisplayFor(modelItem => Model.Short_Course.SC_NameTH)</td>
             </tr>
             <tr>
                 <th style="text-align: center">@Html.DisplayNameFor(model => model.Gen_Name)</th>
                 <td>@Html.DisplayFor(modelItem => Model.Gen_Name)</td>
-            </tr>
-            <tr>
-                <th style="text-align: center">@Html.DisplayNameFor(model => model.Gen_Member)</th>
-                <td>@Html.DisplayFor(modelItem => Model.Gen_Member)</td>
-            </tr>
-            <tr>
-                <th style="text-align: center">@Html.DisplayNameFor(model => model.Gen_Year)</th>
-                <td>@Html.DisplayFor(modelItem => Model.Gen_Year)</td>
-            </tr>
-            <tr>
-                <th style="text-align: center">@Html.DisplayNameFor(model => model.Gen_Date)</th>
-                <td>@Html.DisplayFor(modelItem => Model.Gen_Date)</td>
             </tr>
             <tr>
                 <th style="text-align: center">@Html.DisplayNameFor(model => model.Gen_Location)</th>
@@ -36,16 +33,20 @@
                 <td style="color: @(Model.Gen_Status1.Gen_Name == "เปิดรับสมัคร" ? "forestgreen" : "red")">@Html.DisplayFor(modelItem => Model.Gen_Status1.Gen_Name)</td>
             </tr>
             <tr>
-                <th style="text-align: center">@Html.DisplayNameFor(model => model.Gen_Fee)</th>
-                <td><strong>@Html.DisplayFor(modelItem => Model.Gen_Fee) บาท</strong></td>
+                <th style="text-align: center">รายะเอียดทั้งหมด</th>
+                <td>
+                    <a target="_blank" href="@Url.Action("forpdfview", "Projects")?id=@Model.Gen_PDF">
+                        เปิดอ่าน
+                    </a>
+                </td>
             </tr>
         </tbody>
     </table>
     <h1>
-        @Html.DisplayNameFor(model => model.Gen_Details)
+        รายะเอียด
     </h1>
     <h5>
-        @Html.DisplayFor(modelItem => Model.Gen_Details)
+        @Html.DisplayFor(modelItem => Model.Short_Course.SC_Details)
     </h5>
 </div>
 <div class="modal-footer">
