--- a/CSManagement/CSManagement/Views/Histories/Create.cshtml
+++ b/CSManagement/CSManagement/Views/Histories/Create.cshtml
@@ -24,15 +24,25 @@
             <!-- /.box-header -->
             <div class="box-body" style="font-size:15px">
                 <div class="row">
-                    <div class="form-group col-md-6">
-                        @Html.LabelFor(model => model.HIS_StuID, "ชื่อนักศึกษา", htmlAttributes: new { @class = "control-label" })
-                        @Html.EditorFor(model => model.HIS_StuID, new { htmlAttributes = new { @class = "form-control", @id = "Stu_Name", @PlaceHolder = "กรุณากรอกชื่อนักศึกษา เช่น สมชาย" } })
-                        @Html.ValidationMessageFor(model => model.HIS_StuID, "", new { @class = "text-danger" })
-                    </div>
-
+                    @if (Session["Stuend"] != null)
+                    {
+                        <div class="form-group col-md-6">
+                            @Html.LabelFor(model => model.HIS_StuID, "ชื่อนักศึกษา", htmlAttributes: new { @class = "control-label" })
+                            @Html.EditorFor(model => model.HIS_StuID, new { htmlAttributes = new { @class = "form-control", @id = "Stu_Name", @Value = Session["Stuend"],@readonly="true" } })
+                            @Html.ValidationMessageFor(model => model.HIS_StuID, "", new { @class = "text-danger" })
+                        </div>
+                    }
+                    else
+                    {
+                        <div class="form-group col-md-6">
+                            @Html.LabelFor(model => model.HIS_StuID, "ชื่อนักศึกษา", htmlAttributes: new { @class = "control-label" })
+                            @Html.EditorFor(model => model.HIS_StuID, new { htmlAttributes = new { @class = "form-control", @id = "Stu_Name", @PlaceHolder = "กรุณากรอกชื่อนักศึกษา เช่น สมชาย" } })
+                            @Html.ValidationMessageFor(model => model.HIS_StuID, "", new { @class = "text-danger" })
+                        </div>
+                    }
                     <div class="form-group col-md-6">
                         @Html.LabelFor(model => model.HIS_Company, htmlAttributes: new { @class = "control-label" })
-                        @Html.EditorFor(model => model.HIS_Company, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.EditorFor(model => model.HIS_Company, new { htmlAttributes = new { @class = "form-control", AutoComplete = "off" } })
                         @Html.ValidationMessageFor(model => model.HIS_Company, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -46,13 +56,13 @@
 
                     <div class="form-group col-md-4">
                         @Html.LabelFor(model => model.HIS_Jobname, htmlAttributes: new { @class = "control-label" })
-                        @Html.EditorFor(model => model.HIS_Jobname, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.EditorFor(model => model.HIS_Jobname, new { htmlAttributes = new { @class = "form-control", AutoComplete = "off" } })
                         @Html.ValidationMessageFor(model => model.HIS_Jobname, "", new { @class = "text-danger" })
                     </div>
 
                     <div class="form-group col-md-4">
                         @Html.LabelFor(model => model.HIS_Year, htmlAttributes: new { @class = "control-label" })
-                        @Html.EditorFor(model => model.HIS_Year, new { htmlAttributes = new { @class = "form-control", @PlaceHolder = "ใส่เฉพาะปี(จำไม่ได้ไม่ต้องใส่)" } })
+                        @Html.EditorFor(model => model.HIS_Year, new { htmlAttributes = new { @class = "form-control", AutoComplete = "off", @PlaceHolder = "ใส่เฉพาะปี พศ.(จำไม่ได้ไม่ต้องใส่)" } })
                         @Html.ValidationMessageFor(model => model.HIS_Year, "", new { @class = "text-danger" })
                     </div>
                 </div>
