--- a/CSManagement/CSManagement/Views/Picture_Banner/Create.cshtml
+++ b/CSManagement/CSManagement/Views/Picture_Banner/Create.cshtml
@@ -8,10 +8,10 @@
 <h2>Create</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>Picture_Banner</h4>
         <hr />
@@ -27,8 +27,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Picture_Img, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Picture_Img, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Picture_Img, "", new { @class = "text-danger" })
+                <input type="file" id="file" name="file">
             </div>
         </div>
 
