--- a/CSManagement/CSManagement/Views/Projects/Index.cshtml
+++ b/CSManagement/CSManagement/Views/Projects/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<CSManagement.Models.Project>
+﻿@model IEnumerable<CSManagement.Models.Project_View>
 
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -37,10 +37,12 @@
                     {
                         <tr>
                             <td style="text-align:center">@(i++)</td>
-                            <td>@item.Student.Stu_Title@item.Student.Stu_Name @item.Student.Stu_Surname</td>
-                            <td>@Html.ActionLink(@item.Pj_NameTH,@*" (" + @item.Pj_NameENG + ")"*@ "Details", new { id = item.Pj_ID }, new { target = "_blank" })</td>
+                            <td>@item.Stu_Title@item.Stu_Name @item.Stu_Surname</td>
+                            <td>@Html.ActionLink(@item.Pj_NameTH.Substring(0, Math.Min(40, @item.Pj_NameTH.Length)), "Details", new { id = item.Pj_ID }, new { target = "_blank" })</td>
                             <td style="text-align:center">@Html.DisplayFor(modelItem => item.Pj_TypePj)</td>
-                            <td>@Html.ActionLink("ดูไฟล์งาน", "ShowPDF", new { id = item.Pj_ID }, new { target = "_blank" })</td>
+                            <td>
+                                <a class="btn btn-info" target="_blank" href="@Url.Action("forpdfview", "Projects")?id=@item.Pj_File"><i class="fa fa-file-text-o"></i> อ่านงานวิจัย</a>
+                            </td>
                             <td>@Html.DisplayFor(modelItem => item.Pj_Date)</td>
                             <td style="text-align: center">
                                 <div class="delete-section">
