--- a/CSManagement/CSManagement/Views/Shared/_Sidebar.cshtml
+++ b/CSManagement/CSManagement/Views/Shared/_Sidebar.cshtml
@@ -15,145 +15,152 @@
         @* END Search *@
         @* BEGIN Menu *@
 
-        <ul class="sidebar-menu" data-widget="tree">
-            <li class="@Url.IsLinkActive("IndexUser", "Home")">
-                <a href="@Url.Action("IndexUser", "Home")"><i class="fa fa-home"></i> <span>หน้าหลักผู้เยี่ยมชม</span></a>
-            </li>
+    <ul class="sidebar-menu" data-widget="tree">
+        <li class="@Url.IsLinkActive("IndexUser", "Home")">
+            <a href="@Url.Action("IndexUser", "Home")"><i class="fa fa-home"></i> <span>หน้าหลักผู้เยี่ยมชม</span></a>
+        </li>
 
-            <li class="@Url.IsLinkActive("Index", "Home")">
-                <a href="@Url.Action("Index", "Home")"><i class="fa fa-home"></i> <span>หน้าหลัก</span></a>
+        <li class="@Url.IsLinkActive("Index", "Home")">
+            <a href="@Url.Action("Index", "Home")"><i class="fa fa-home"></i> <span>หน้าหลัก</span></a>
+        </li>
+
+        @if (Session["PJ"] != null)
+        {
+            <li>
+                <a href="@Url.Action("Index", "Projects")"><i class="fa fa-graduation-cap"></i> <span>จัดการข้อมูลปริญญานิพนธ์</span></a>
             </li>
-            
-            @if (Session["PJ"] != null)
+        }
+
+        @if (Session["Stuend"] != null)
+        {
+            <li>
+                <a href="@Url.Action("Create", "Histories")"><i class="fa fa-graduation-cap"></i> <span>จัดการข้อมูลการทำงาน</span></a>
+            </li>
+        }
+
+        @{
+            if (Session["AJ"] != null)
             {
+                <li class="treeview">
+                    <a href="#">
+                        <i class="fa fa-user"></i> <span>จัดการข้อมูลนักศึกษา</span>
+                        <span class="pull-right-container">
+                            <i class="fa fa-angle-left pull-right"></i>
+                        </span>
+                    </a>
+                    <ul class="treeview-menu">
+                        <li>
+                            <a href="@Url.Action("Index", "Students")"><i class="fa fa-user"></i> <span>จัดการข้อมูลนักศึกษา</span></a>
+                        </li>
+                        <li>
+                            <a href="@Url.Action("Index", "Histories")"><i class="fa fa-user"></i> <span>จัดการประวัติการทำงาน</span></a>
+                        </li>
+                        <li>
+                            <a href="@Url.Action("Index", "Schools")"><i class="fa fa-user"></i> <span>จัดการโรงเรียนเดิมของนักศึกษา</span></a>
+                        </li>
+                        <li>
+                            <a href="@Url.Action("Index", "Logins")"><i class="fa fa-user"></i> <span>ข้อมูลไอดี-พาสเวิร์ด</span></a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="@Url.IsLinkActive("Index", "Teachers")">
+                    <a href="@Url.Action("Index", "Teachers")"><i class="fa fa-user"></i> <span>จัดการข้อมูลอาจารย์</span></a>
+                </li>
+
+
                 <li>
                     <a href="@Url.Action("Index", "Projects")"><i class="fa fa-graduation-cap"></i> <span>จัดการข้อมูลปริญญานิพนธ์</span></a>
                 </li>
+
+                <li class="treeview">
+                    <a href="#">
+                        <i class="fa fa-bullhorn"></i> <span>จัดการข้อมูลประชาสัมพันธ์</span>
+                        <span class="pull-right-container">
+                            <i class="fa fa-angle-left pull-right"></i>
+                        </span>
+                    </a>
+                    <ul class="treeview-menu">
+                        <li>
+                            <a href="@Url.Action("Index", "Syllabus")"><i class="fa fa-user"></i> <span>ข้อมูลประชาสัมพันธ์หลักสูตร</span></a>
+                        </li>
+                        <li>
+                            <a href="@Url.Action("Index", "News")"><i class="fa fa-user"></i> <span>ข้อมูลประชาสัมพันธ์ข่าว</span></a>
+                        </li>
+                        <li>
+                            <a href="@Url.Action("Index", "Courses")"><i class="fa fa-user"></i> <span>ข้อมูลหลักสูตร</span></a>
+                        </li>
+                        <li>
+                            <a href="@Url.Action("Index", "Departments")"><i class="fa fa-user"></i> <span>ข้อมูลหมวดวิชา</span></a>
+                        </li>
+                        <li>
+                            <a href="@Url.Action("Index", "Department_Sup")"><i class="fa fa-user"></i> <span>ข้อมูลหมวดวิชา</span></a>
+                        </li>
+                        <li>
+                            <a href="@Url.Action("Index", "Pictures")"><i class="fa fa-user"></i> <span>รูปภาพประชาสัมพันธ์</span></a>
+                        </li>
+                        <li>
+                            <a href="@Url.Action("Index", "Picture_Banner")"><i class="fa fa-user"></i> <span>รูปภาพแบนเนอร์</span></a>
+                        </li>
+                    </ul>
+                </li>
+
+                <li class="treeview">
+                    <a href="#">
+                        <i class="fa fa-calendar-check-o"></i> <span>จัดการข้อมูลครุภัณฑ์</span>
+                        <span class="pull-right-container">
+                            <i class="fa fa-angle-left pull-right"></i>
+                        </span>
+                    </a>
+                    <ul class="treeview-menu">
+                        <li>
+                            <a href="@Url.Action("Index", "ComputerEquipments")"><i class="fa fa-user"></i> <span>ข้อมูลครุภัณฑ์</span></a>
+                        </li>
+                        <li>
+                            <a href="@Url.Action("Index", "Disposes")"><i class="fa fa-user"></i> <span>การจำหน่าย</span></a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="treeview">
+                    <a href="#">
+                        <i class="fa fa-graduation-cap"></i> <span>จัดการข้อมูลคอร์สสั้น</span>
+                        <span class="pull-right-container">
+                            <i class="fa fa-angle-left pull-right"></i>
+                        </span>
+                    </a>
+                    <ul class="treeview-menu">
+                        <li>
+                            <a href="@Url.Action("Index", "Short_Course")"><i class="fa fa-user"></i> <span>คอร์สสั้น</span></a>
+                        </li>
+                        <li>
+                            <a href="@Url.Action("Index", "Generations")"><i class="fa fa-user"></i> <span>รุ่น</span></a>
+                        </li>
+                        <li>
+                            <a href="@Url.Action("Index", "Register_SC")"><i class="fa fa-address-book"></i> <span>การสมัคร</span></a>
+                        </li>
+                        <li>
+                            <a href="@Url.Action("Index", "Applieds")"><i class="fa fa-address-book"></i> <span>จัดการสมาชิก</span></a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="treeview">
+                    <a href="#">
+                        <i class="fa fa-calendar-check-o"></i> <span>ดูรีพอร์ต</span>
+                        <span class="pull-right-container">
+                            <i class="fa fa-angle-left pull-right"></i>
+                        </span>
+                    </a>
+                    <ul class="treeview-menu">
+                        <li>
+                            <a href="@Url.Action("Indexforreport", "Students")"><i class="fa fa-user"></i> <span>รายชื่อนักศึก</span></a>
+                        </li>
+                        <li>
+                            <a href="@Url.Action("Indexforschool", "Students")"><i class="fa fa-user"></i> <span>โรงเรียนเดิม</span></a>
+                        </li>
+                    </ul>
+                </li>
             }
-
-            @{
-                if (Session["AJ"] != null)
-                {
-                    <li class="treeview">
-                        <a href="#">
-                            <i class="fa fa-user"></i> <span>จัดการข้อมูลนักศึกษา</span>
-                            <span class="pull-right-container">
-                                <i class="fa fa-angle-left pull-right"></i>
-                            </span>
-                        </a>
-                        <ul class="treeview-menu">
-                            <li>
-                                <a href="@Url.Action("Index", "Students")"><i class="fa fa-user"></i> <span>จัดการข้อมูลนักศึกษา</span></a>
-                            </li>
-                            <li>
-                                <a href="@Url.Action("Index", "Histories")"><i class="fa fa-user"></i> <span>จัดการประวัติการทำงาน</span></a>
-                            </li>
-                            <li>
-                                <a href="@Url.Action("Index", "Schools")"><i class="fa fa-user"></i> <span>จัดการโรงเรียนเดิมของนักศึกษา</span></a>
-                            </li>
-                            <li>
-                                <a href="@Url.Action("Index", "Logins")"><i class="fa fa-user"></i> <span>ข้อมูลไอดี-พาสเวิร์ด</span></a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="@Url.IsLinkActive("Index", "Teachers")">
-                        <a href="@Url.Action("Index", "Teachers")"><i class="fa fa-user"></i> <span>จัดการข้อมูลอาจารย์</span></a>
-                    </li>
-
-
-                    <li>
-                        <a href="@Url.Action("Index", "Projects")"><i class="fa fa-graduation-cap"></i> <span>จัดการข้อมูลปริญญานิพนธ์</span></a>
-                    </li>
-
-                    <li class="treeview">
-                        <a href="#">
-                            <i class="fa fa-bullhorn"></i> <span>จัดการข้อมูลประชาสัมพันธ์</span>
-                            <span class="pull-right-container">
-                                <i class="fa fa-angle-left pull-right"></i>
-                            </span>
-                        </a>
-                        <ul class="treeview-menu">
-                            <li>
-                                <a href="@Url.Action("Index", "Departments")"><i class="fa fa-user"></i> <span>ข้อมูลหมวดวิชา</span></a>
-                            </li>
-                            <li>
-                                <a href="@Url.Action("Index", "Syllabus")"><i class="fa fa-user"></i> <span>ข้อมูลประชาสัมพันธ์หลักสูตร</span></a>
-                            </li>
-                            <li>
-                                <a href="@Url.Action("Index", "News")"><i class="fa fa-user"></i> <span>ข้อมูลประชาสัมพันธ์ข่าว</span></a>
-                            </li>
-                            <li>
-                                <a href="@Url.Action("Index", "Courses")"><i class="fa fa-user"></i> <span>ข้อมูลหลักสูตร</span></a>
-                            </li>
-                            <li>
-                                <a href="@Url.Action("Index", "Pictures")"><i class="fa fa-user"></i> <span>รูปภาพประชาสัมพันธ์</span></a>
-                            </li>
-                            <li>
-                                <a href="@Url.Action("Index", "Picture_Banner")"><i class="fa fa-user"></i> <span>รูปภาพแบนเนอร์</span></a>
-                            </li>
-                            <li>
-                                <a href="@Url.Action("Index", "RegisterLinks")"><i class="fa fa-user"></i> <span>เว็ปสมัครเรียน</span></a>
-                            </li>
-                        </ul>
-                    </li>
-
-                    <li class="treeview">
-                        <a href="#">
-                            <i class="fa fa-calendar-check-o"></i> <span>จัดการข้อมูลครุภัณฑ์</span>
-                            <span class="pull-right-container">
-                                <i class="fa fa-angle-left pull-right"></i>
-                            </span>
-                        </a>
-                        <ul class="treeview-menu">
-                            <li>
-                                <a href="@Url.Action("Index", "ComputerEquipments")"><i class="fa fa-user"></i> <span>ข้อมูลครุภัณฑ์</span></a>
-                            </li>
-                            <li>
-                                <a href="@Url.Action("Index", "Disposes")"><i class="fa fa-user"></i> <span>การจำหน่าย</span></a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="treeview">
-                        <a href="#">
-                            <i class="fa fa-graduation-cap"></i> <span>จัดการข้อมูลคอร์สสั้น</span>
-                            <span class="pull-right-container">
-                                <i class="fa fa-angle-left pull-right"></i>
-                            </span>
-                        </a>
-                        <ul class="treeview-menu">
-                            <li>
-                                <a href="@Url.Action("Index", "Short_Course")"><i class="fa fa-user"></i> <span>คอร์สสั้น</span></a>
-                            </li>
-                            <li>
-                                <a href="@Url.Action("Index", "Generations")"><i class="fa fa-user"></i> <span>รุ่น</span></a>
-                            </li>
-                            <li>
-                                <a href="@Url.Action("Index", "Register_SC")"><i class="fa fa-address-book"></i> <span>การสมัคร</span></a>
-                            </li>
-                            <li>
-                                <a href="@Url.Action("Index", "Applieds")"><i class="fa fa-address-book"></i> <span>จัดการสมาชิก</span></a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="treeview">
-                        <a href="#">
-                            <i class="fa fa-calendar-check-o"></i> <span>ดูรีพอร์ต</span>
-                            <span class="pull-right-container">
-                                <i class="fa fa-angle-left pull-right"></i>
-                            </span>
-                        </a>
-                        <ul class="treeview-menu">
-                            <li>
-                                <a href="@Url.Action("Indexforreport", "Students")"><i class="fa fa-user"></i> <span>รายชื่อนักศึก</span></a>
-                            </li>
-                            <li>
-                                <a href="@Url.Action("Indexforschool", "Students")"><i class="fa fa-user"></i> <span>โรงเรียนเดิม</span></a>
-                            </li>
-                        </ul>
-                    </li>
-                }
-            }
-        </ul>
+        }
+    </ul>
         @* END Menu *@
     </section>
 </aside>
