--- a/CSManagement/CSManagement/Views/Teachers/Create.cshtml
+++ b/CSManagement/CSManagement/Views/Teachers/Create.cshtml
@@ -29,7 +29,7 @@
 
                     <div class="form-group col-md-3">
                         @Html.LabelFor(model => model.Tea_TitleID, htmlAttributes: new { @class = "control-label" })
-                        @Html.DropDownList("Tea_TitleID", null, "เลือกคำนำหน้า",htmlAttributes: new { @class = "form-control" })
+                        @Html.DropDownList("Tea_TitleID", null, "เลือกคำนำหน้า", htmlAttributes: new { @class = "form-control" })
                         @Html.ValidationMessageFor(model => model.Tea_TitleID, "", new { @class = "text-danger" })
                     </div>
 
@@ -46,14 +46,36 @@
                     </div>
                 </div>
 
+
                 <div class="row">
-                    <div class="form-group col-md-3">
+                    <div class="form-group col-md-5">
+                        @Html.LabelFor(model => model.Tea_LvEdu, htmlAttributes: new { @class = "control-label" })
+                        @Html.EditorFor(model => model.Tea_LvEdu, new { htmlAttributes = new { @class = "form-control", rows = "7" } })
+                        @Html.ValidationMessageFor(model => model.Tea_LvEdu, "", new { @class = "text-danger" })
+                    </div>
+
+                    <div class="form-group col-md-5">
+                        @Html.LabelFor(model => model.Tea_Export, htmlAttributes: new { @class = "control-label" })
+                        @Html.EditorFor(model => model.Tea_Export, new { htmlAttributes = new { @class = "form-control", rows = "7" } })
+                        @Html.ValidationMessageFor(model => model.Tea_Export, "", new { @class = "text-danger" })
+                    </div>
+
+                    <div class="form-group col-md-2">
+                        @Html.LabelFor(model => model.Tea_Tel, htmlAttributes: new { @class = "control-label" })
+                        @Html.EditorFor(model => model.Tea_Tel, new { htmlAttributes = new { @class = "form-control", rows = "7" } })
+                        @Html.ValidationMessageFor(model => model.Tea_Tel, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="form-group col-md-4">
                         @Html.LabelFor(model => model.Tea_Birth, htmlAttributes: new { @class = "control-label" })
                         <div class="input-group">
                             <div class="input-group-addon">
                                 <i class="fa fa-calendar"></i>
                             </div>
-                            <input type="text" id="birthday" name="birthday" class="form-control" data-inputmask="'alias': 'dd-mm-yyyy'" data-mask>
+                            @Html.TextBoxFor(model => model.Tea_Birth,
+                                new { @Value = @DateTime.Now.ToString("MM/dd/yyyy"), @class = "datepicker form-control" })
                         </div>
                     </div>
 
@@ -75,19 +97,6 @@
                     </div>
                 </div>
 
-                <div class="row">
-                    <div class="form-group col-md-6">
-                        @Html.LabelFor(model => model.Tea_LvEdu, htmlAttributes: new { @class = "control-label" })
-                        @Html.EditorFor(model => model.Tea_LvEdu, new { htmlAttributes = new { @class = "form-control", rows="7"}})
-                        @Html.ValidationMessageFor(model => model.Tea_LvEdu, "", new { @class = "text-danger" })
-                    </div>
-
-                    <div class="form-group col-md-6">
-                        @Html.LabelFor(model => model.Tea_Export, htmlAttributes: new { @class = "control-label" })
-                        @Html.EditorFor(model => model.Tea_Export, new { htmlAttributes = new { @class = "form-control" , rows="7"}})
-                        @Html.ValidationMessageFor(model => model.Tea_Export, "", new { @class = "text-danger" })
-                    </div>
-                </div>
 
                 <div class="text-center">
                     <button type="submit" class="btn btn-success col-lg-3" style="float:right;font-size:18px"><i class="fa fa-save"></i> บันทึกข้อมูล</button>
