--- a/CSManagement/CSManagement/Views/Teachers/Edit.cshtml
+++ b/CSManagement/CSManagement/Views/Teachers/Edit.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-@using (Html.BeginForm("Edit", "Teachers" ,FormMethod.Post, new { enctype="multipart/form-data", accept_charset="utf-8" }))
+@using (Html.BeginForm("Edit", "Teachers", FormMethod.Post, new { enctype = "multipart/form-data", accept_charset = "utf-8" }))
 {
     @Html.AntiForgeryToken()
     <section class="content">
@@ -45,14 +45,36 @@
                     </div>
                 </div>
 
+
                 <div class="row">
-                    <div class="form-group col-md-3">
+                    <div class="form-group col-md-5">
+                        @Html.LabelFor(model => model.Tea_LvEdu, htmlAttributes: new { @class = "control-label" })
+                        @Html.EditorFor(model => model.Tea_LvEdu, new { htmlAttributes = new { @class = "form-control", rows = "7" } })
+                        @Html.ValidationMessageFor(model => model.Tea_LvEdu, "", new { @class = "text-danger" })
+                    </div>
+
+                    <div class="form-group col-md-5">
+                        @Html.LabelFor(model => model.Tea_Export, htmlAttributes: new { @class = "control-label" })
+                        @Html.EditorFor(model => model.Tea_Export, new { htmlAttributes = new { @class = "form-control", rows = "7" } })
+                        @Html.ValidationMessageFor(model => model.Tea_Export, "", new { @class = "text-danger" })
+                    </div>
+
+                    <div class="form-group col-md-2">
+                        @Html.LabelFor(model => model.Tea_Tel, htmlAttributes: new { @class = "control-label" })
+                        @Html.EditorFor(model => model.Tea_Tel, new { htmlAttributes = new { @class = "form-control", rows = "7" } })
+                        @Html.ValidationMessageFor(model => model.Tea_Tel, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="form-group col-md-4">
                         @Html.LabelFor(model => model.Tea_Birth, htmlAttributes: new { @class = "control-label" })
                         <div class="input-group">
                             <div class="input-group-addon">
                                 <i class="fa fa-calendar"></i>
                             </div>
-                            <input type="text" id="birthday" name="birthday" class="form-control" data-inputmask="'alias': 'dd-mm-yyyy'" data-mask>
+                            @Html.TextBoxFor(model => model.Tea_Birth,
+                                new { @Value = @DateTime.Now.ToString("MM/dd/yyyy"), @class = "datepicker form-control" })
                         </div>
                     </div>
 
@@ -74,19 +96,6 @@
                     </div>
                 </div>
 
-                <div class="row">
-                    <div class="form-group col-md-6">
-                        @Html.LabelFor(model => model.Tea_LvEdu, htmlAttributes: new { @class = "control-label" })
-                        @Html.EditorFor(model => model.Tea_LvEdu, new { htmlAttributes = new { @class = "form-control", rows = "7" } })
-                        @Html.ValidationMessageFor(model => model.Tea_LvEdu, "", new { @class = "text-danger" })
-                    </div>
-
-                    <div class="form-group col-md-6">
-                        @Html.LabelFor(model => model.Tea_Export, htmlAttributes: new { @class = "control-label" })
-                        @Html.EditorFor(model => model.Tea_Export, new { htmlAttributes = new { @class = "form-control", rows = "7" } })
-                        @Html.ValidationMessageFor(model => model.Tea_Export, "", new { @class = "text-danger" })
-                    </div>
-                </div>
                 <div class="text-center">
                     <button type="submit" class="btn btn-success col-lg-3" style="float:right;font-size:18px"><i class="fa fa-save"></i> บันทึกข้อมูล</button>
                     <a class="btn btn-default col-lg-3" style="float:left;font-size:18px" href="@Url.Action("Index", "Teachers")"><i class="fa fa-mail-reply "></i> ย้อนกลับ</a>
