--- a/CSManagement/CSManagement/Views/Shared/_Sidebar.cshtml
+++ b/CSManagement/CSManagement/Views/Shared/_Sidebar.cshtml
@@ -61,6 +61,9 @@
                         <li>
                             <a href="@Url.Action("Index", "Logins")"><i class="fa fa-user"></i> <span>ข้อมูลไอดี-พาสเวิร์ด</span></a>
                         </li>
+                        <li>
+                            <a href="@Url.Action("Index", "Titles")"><i class="fa fa-user"></i> <span>จัดการข้อมูลคำนำหน้าชื่อ</span></a>
+                        </li>
                     </ul>
                 </li>
                 <li class="@Url.IsLinkActive("Index", "Teachers")">
@@ -139,6 +142,9 @@
                         </li>
                         <li>
                             <a href="@Url.Action("Index", "Applieds")"><i class="fa fa-address-book"></i> <span>จัดการสมาชิก</span></a>
+                        </li>
+                        <li>
+                            <a href="@Url.Action("Report_Index", "Short_Course")"><i class="fa fa-address-book"></i> <span>รายชื่อผู้สมัคร</span></a>
                         </li>
                     </ul>
                 </li>
