--- a/CSManagement/CSManagement/Views/Projects/Index.cshtml
+++ b/CSManagement/CSManagement/Views/Projects/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<CSManagement.Models.Project_View>
+﻿@model IEnumerable<CSManagement.Models.Project>
 
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -37,7 +37,7 @@
                     {
                         <tr>
                             <td style="text-align:center">@(i++)</td>
-                            <td>@item.Stu_Title@item.Stu_Name @item.Stu_Surname</td>
+                            <td>@item.Student.Title.Title_Name@item.Student.Stu_Name @item.Student.Stu_Surname</td>
                             <td>@Html.ActionLink(@item.Pj_NameTH.Substring(0, Math.Min(40, @item.Pj_NameTH.Length)), "Details", new { id = item.Pj_ID }, new { target = "_blank" })</td>
                             <td style="text-align:center">@Html.DisplayFor(modelItem => item.Pj_TypePj)</td>
                             <td>
