--- a/CSManagement/CSManagement/Views/Students/Edit.cshtml
+++ b/CSManagement/CSManagement/Views/Students/Edit.cshtml
@@ -29,12 +29,7 @@
 
                     <div class="form-group col-md-3">
                         @Html.LabelFor(model => model.Stu_Title, htmlAttributes: new { @class = "control-label" })
-                        @Html.DropDownListFor(model => model.Stu_Title, new List<SelectListItem>()
-                        {
-                            new SelectListItem() { Text = "นาย", Value = "นาย" },
-                            new SelectListItem() { Text = "นาง", Value = "นาง" },
-                            new SelectListItem() { Text = "นางสาว", Value = "นางสาว"}
-                        }, "เลือกคำนำหน้าชื่อ", new { @id = "Stu_Sex", @class = "form-control" })
+                        @Html.DropDownList("Tea_TitleID", null, "เลือกคำนำหน้า", htmlAttributes: new { @class = "form-control" })
                         @Html.ValidationMessageFor(model => model.Stu_Title, "", new { @class = "text-danger" })
                     </div>
 
