--- a/CSManagement/CSManagement/Views/Shared/_LayoutUser.cshtml
+++ b/CSManagement/CSManagement/Views/Shared/_LayoutUser.cshtml
@@ -197,7 +197,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#myPage" style=" padding-bottom: .5rem !important;padding-top: .5rem !important;">
+                    <a class="navbar-brand" href="https://kru.ac.th/kru/" style=" padding-bottom: .5rem !important;padding-top: .5rem !important;">
                         <img src="~/Content/img/logo.png" style=" max-width: 100%;height: 120%;" />
                     </a>
                 </div>
